--- a/pom.xml
+++ b/pom.xml
@@ -53,5 +53,10 @@
       <artifactId>jackson-dataformat-yaml</artifactId>
       <version>2.13.0</version>
     </dependency>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.5.0</version>
+    </dependency>
   </dependencies>
 </project>
